# zenmail

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: app.rs  config.rs  main.rs
src/mail/: imap.rs  mod.rs  smtp.rs
src/ui/: compose.rs  config.rs  list.rs  mod.rs  view.rs
