[package]
name = "zenmail"
version = "0.1.1"
edition = "2021"
description = "Zen Mail Client is a minimal TUI mail client for people who still use email to talk to humans."
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/wavefnd/zenmail"
repository = "https://github.com/wavefnd/zenmail"
keywords = ["emailclient", "mailclient", "email", "mail"]

[dependencies]
ratatui = "0.26.3"
crossterm = "0.29.0"

serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0.100"
dirs = "6.0.0"

imap = "2.4.1"
native-tls = "0.2.14"

lettre = { version = "0.11.19", features = ["smtp-transport", "builder", "tokio1-native-tls"] }

tokio = { version = "1.48.0", features = ["full"] }
mailparse = "0.16.1"
html2text = "0.16.5"